NEXT-2266 - First basis for cms theme integration

--- a/Resources/administration/src/module/sw-cms/component/sw-cms-slot/sw-cms-slot.html.twig
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-slot/sw-cms-slot.html.twig
@@ -26,9 +26,12 @@
         {% endblock %}
 
         {% block sw_cms_slot_settings_modal %}
-            <sw-modal v-if="showElementSettings" :title="$tc('sw-cms.detail.titleElementSettingsModal')" @closeModal="onCloseSettingsModal">
+            <sw-modal class="sw-cms-slot__config-modal"
+                      v-if="showElementSettings"
+                      :title="$tc('sw-cms.detail.titleElementSettingsModal')"
+                      @closeModal="onCloseSettingsModal">
                 {% block sw_cms_slot_settings_modal_component %}
-                    <component :is="elementConfig.configComponent" v-model="element" :pageContext="pageContext"></component>
+                    <component :is="elementConfig.configComponent" v-model="element"></component>
                 {% endblock %}
 
                 {% block sw_cms_slot_settings_modal_footer %}
