--- a/Resources/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/image/component/sw-cms-el-image.html.twig
@@ -1,19 +1,6 @@
 {% block sw_cms_element_image %}
     <div class="sw-cms-el-image">
         <img :src="element.data.media.url" v-if="element.data.media">
-
-        <sw-media-upload v-else
-                         variant="regular"
-                         :uploadTag="uploadTag"
-                         :source="element.data.media"
-                         :allowMultiSelect="false"
-                         :caption="$tc('sw-cms.elements.captionMediaUpload')"
-                         @sw-media-upload-remove-image="onImageRemove">
-        </sw-media-upload>
-        <sw-upload-store-listener
-                :uploadTag="uploadTag"
-                @sw-media-upload-added="onChangeMedia"
-                @sw-media-upload-finished="onImageUpload">
-        </sw-upload-store-listener>
+        <img :src="'/administration/static/img/cms/image_preview_large.jpg' | asset" v-else>
     </div>
 {% endblock %}
