--- a/Resources/administration/src/module/sw-cms/elements/text/component/sw-cms-el-text.html.twig
+++ b/Resources/administration/src/module/sw-cms/elements/text/component/sw-cms-el-text.html.twig
@@ -6,8 +6,11 @@
              spellcheck="false"
              @focus="onFocus"
              @blur="onBlur"
-             v-html="element.config.content">
+             v-html="element.config.content.value"
+             v-if="element.config.content.source === 'static'">
         </div>
+
+        <div class="content-editor" v-if="element.config.content.source === 'entity'"></div>
 
         <div class="content-editor__toolbar" v-if="hasFocus">
             <button @click="onSetBold"><sw-icon name="default-text-style-bold" size="18"></sw-icon></button>
