NEXT-2534 - Send correct language to Store API

--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login-status/sw-plugin-store-login-status.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login-status/sw-plugin-store-login-status.html.twig
@@ -16,7 +16,7 @@
                                 <span class="sw-plugin-store-login-status__shopware-id">{{ shopwareId }}</span>
                             </template>
                             <template v-else>
-                                <p @click="login()" class="sw-plugin-store-login-status__login">Anmelden</p>
+                                <p @click="login()" class="sw-plugin-store-login-status__login">{{ $tc('sw-plugin.general.login') }}</p>
                             </template>
                         </div>
                     </div>
