NEXT-2405 Added loader for the admin menu to prevent clicking on the user actions when no current user is active

--- a/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-admin-menu/sw-admin-menu.html.twig
@@ -70,6 +70,8 @@
                          @click="onToggleUserActions"
                          @mouseenter="openUserActions">
 
+                            <sw-loader size="32px" v-if="isUserLoading"></sw-loader>
+
                         {% block sw_admin_menu_user_actions_avatar %}
                             <sw-avatar class="sw-admin-menu__avatar"
                                        :imageUrl="avatarUrl"
