NNTR - Add orderDate field

--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -93,7 +93,7 @@
 
                                     {% block sw_order_list_grid_columns_order_date %}
                                         <template slot="column-date" slot-scope="{ item }">
-                                            {{ item.date | date }}
+                                            {{ item.orderDate | date }}
                                         </template>
                                     {% endblock %}
                                 {% endblock %}
