NEXT-2601 - Fix styling

--- a/Resources/administration/src/app/component/form/sw-code-editor/sw-code-editor.html.twig
+++ b/Resources/administration/src/app/component/form/sw-code-editor/sw-code-editor.html.twig
@@ -12,8 +12,8 @@
                  ref="editor"
                  :content="value"
                  @input="onInput"
-                 @change="onChange"
-            ></div>
+                 @change="onChange">
+            </div>
         {% endblock %}
 
     </div>
