--- a/Resources/administration/src/module/sw-order/component/sw-order-delivery-metadata/sw-order-delivery-metadata.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-delivery-metadata/sw-order-delivery-metadata.scss
@@ -1,9 +1,11 @@
 .sw-order-delivery-metadata {
     .sw-address {
-    margin: 0;
+        margin: 0;
     }
+
     .sw-description-list {
-        dt,dd {
+        dt,
+        dd {
             border-color: transparent;
         }
 
@@ -15,5 +17,4 @@
             padding: 0;
         }
     }
-
 }
