NEXT-2398 - Use module manifest for color and iconname

--- a/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-search-bar-item/sw-search-bar-item.html.twig
@@ -60,7 +60,7 @@
                     <span class="sw-search-bar-item__label">
                         <sw-highlight-text
                                 :searchTerm="searchTerm"
-                                :text="`${item.orderNumber} ${item.orderCustomer.firstName} ${item.orderCustomer.lastName}`">
+                                :text="`${item.orderNumber} - ${item.orderCustomer.firstName} ${item.orderCustomer.lastName}`">
                         </sw-highlight-text>
                     </span>
                 {% endblock %}
